--- a/Testes/simple.ipynb
+++ b/Testes/simple.ipynb
@@ -42,6 +42,11 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
@@ -52,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
