--- a/13.Tkinter.ipynb
+++ b/13.Tkinter.ipynb
@@ -229,7 +229,7 @@
     "janela.iconbitmap(\"Assets/Tkinter.ico\") # Define o ícone da janela.\n",
     "\n",
     "\n",
-    "# Cria um widget\n",
+    "# Cria um widget de texto\n",
     "\n",
     "meuTexto = tk.Label(janela, text=\"Olá Mundo!\", font=(\"Helvetica\", 16), fg=\"white\", bg=\"blue\")\n",
     "\n",
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,10 +264,10 @@
     "janela.iconbitmap(\"Assets/Tkinter.ico\") # Define o ícone da janela.\n",
     "\n",
     "\n",
-    "# Cria um widget\n",
+    "# Cria um widget de imagem\n",
     "\n",
     "minhaImagem = tk.PhotoImage(file=\"Assets/minhaImagem.png\")\n",
-    "imagem = tk.Label(width=400, height=130, bg=\"black\", image=minhaImagem)\n",
+    "imagem = tk.Label(width=512, height=512, bg=\"#4a4a4a\", image=minhaImagem)\n",
     "\n",
     "# Reposiciona\n",
     "imagem.place(relx=0.5, rely=0.5, anchor=\"center\")\n",
@@ -275,6 +275,157 @@
     "# Executar o loop principal\n",
     "\n",
     "janela.mainloop() # Inicia o loop principal para exibir a janela e manter a aplicação em execução.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemplo 6 - Widgets - Texto, Imagem e reposicionamento usando Grid\n",
+    "\n",
+    "# Importe a biblioteca\n",
+    "import tkinter as tk\n",
+    "\n",
+    "# Criar uma janela\n",
+    "janela = tk.Tk()\n",
+    "\n",
+    "# Métodos para o objeto janela\n",
+    "janela.title(\"Meu Aplicativo\")  # Define o título da janela\n",
+    "janela.geometry(\"1024x720\")  # Define o tamanho da janela\n",
+    "janela.config(bg='#4a4a4a')  # Configura várias opções para a janela principal\n",
+    "janela.iconbitmap(\"Assets/Tkinter.ico\")  # Define o ícone da janela\n",
+    "\n",
+    "# Cria widget\n",
+    "\n",
+    "meuTexto = tk.Label(janela, text=\"Olá Mundo!\", font=(\"Helvetica\", 16), fg=\"white\", bg=\"blue\")\n",
+    "\n",
+    "minhaImagem = tk.PhotoImage(file=\"Assets/minhaImagem.png\")\n",
+    "imagem = tk.Label(width=512, height=512, bg=\"#4a4a4a\", image=minhaImagem)\n",
+    "\n",
+    "# Reposiciona usando grid\n",
+    "\n",
+    "meuTexto.grid(row=0, column=0, padx=20, pady=20)  # Posiciona na linha 0, coluna 0\n",
+    "imagem.grid(row=1, column=0, padx=20, pady=20)  # Posiciona na linha 0, coluna 0\n",
+    "\n",
+    "# Configurações de peso para expandir colunas e linhas\n",
+    "\n",
+    "janela.grid_columnconfigure(0, weight=1)  # Faz a coluna 0 expandir, centralizando. Mais útil quando dentro de um Frame\n",
+    "\n",
+    "# Para centralizar a imagem no meio da janela, use sticky\n",
+    "#janela.grid_rowconfigure(0, weight=1)  # Faz com que a linha 0 expanda\n",
+    "#janela.grid_columnconfigure(0, weight=1)  # Faz com que a coluna 0 expanda\n",
+    "\n",
+    "# Executar o loop principal\n",
+    "janela.mainloop()  # Inicia o loop principal para exibir a janela e manter a aplicação em execução"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemplo 7 - Widgets - Botões\n",
+    "\n",
+    "# Importe a biblioteca\n",
+    "import tkinter as tk\n",
+    "\n",
+    "# Criar uma janela\n",
+    "janela = tk.Tk()\n",
+    "\n",
+    "# Métodos para o objeto janela\n",
+    "janela.title(\"Meu Aplicativo\")  # Define o título da janela\n",
+    "janela.geometry(\"1024x720\")  # Define o tamanho da janela\n",
+    "janela.config(bg='#4a4a4a')  # Configura várias opções para a janela principal\n",
+    "janela.iconbitmap(\"Assets/Tkinter.ico\")  # Define o ícone da janela\n",
+    "\n",
+    "# Variável para contagem\n",
+    "contador = 0\n",
+    "\n",
+    "# Função para incrementar o contador e atualizar o texto\n",
+    "def incrementar():\n",
+    "    global contador\n",
+    "    contador += 1\n",
+    "    meuTexto.config(text=f\"Contagem: {contador}\")\n",
+    "\n",
+    "# Cria widget de texto\n",
+    "meuTexto = tk.Label(janela, text=\"Contagem: 0\", font=(\"Helvetica\", 16), fg=\"white\", bg=\"blue\")\n",
+    "meuTexto.grid(row=0, column=0, pady=(150,20))\n",
+    "\n",
+    "# Cria botão para incrementar o contador\n",
+    "botao_incrementar = tk.Button(janela, text=\"Incrementar\", command=incrementar, font=(\"Helvetica\", 14))\n",
+    "botao_incrementar.grid(row=1, column=0, pady=10)\n",
+    "\n",
+    "# Cria e posiciona o widget de imagem\n",
+    "minhaImagem = tk.PhotoImage(file=\"Assets/minhaImagemPeq.png\")\n",
+    "imagem = tk.Label(width=256, height=256, bg=\"#4a4a4a\", image=minhaImagem)\n",
+    "imagem.grid(row=2, column=0, pady=20)\n",
+    "\n",
+    "# Configurações de peso para expandir colunas e linhas\n",
+    "janela.grid_columnconfigure(0, weight=1)  # Faz a coluna 0 expandir e centraliza os elementos\n",
+    "\n",
+    "# Executar o loop principal\n",
+    "janela.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Usando Frames e Grids para organizar elementos\n",
+    "\n",
+    "# Importe a biblioteca\n",
+    "import tkinter as tk\n",
+    "\n",
+    "# Criar uma janela\n",
+    "janela = tk.Tk()\n",
+    "\n",
+    "# Métodos para o objeto janela\n",
+    "janela.title(\"Meu Aplicativo\")\n",
+    "janela.geometry(\"1024x720\")\n",
+    "janela.config(bg='#4a4a4a')\n",
+    "janela.iconbitmap(\"Assets/Tkinter.ico\")\n",
+    "\n",
+    "# Criar um frame superior e outro inferior\n",
+    "frame_superior = tk.Frame(janela, bg=\"lightgray\")\n",
+    "frame_superior.grid(row=0, column=0, sticky=\"ew\", padx=20, pady=20)\n",
+    "\n",
+    "frame_inferior = tk.Frame(janela, bg=\"darkgray\")\n",
+    "frame_inferior.grid(row=1, column=0, sticky=\"nsew\", padx=20, pady=20)\n",
+    "\n",
+    "# Configurar a janela para expandir os frames\n",
+    "janela.grid_rowconfigure(1, weight=1)\n",
+    "janela.grid_columnconfigure(0, weight=1)\n",
+    "\n",
+    "# Configurar o frame superior para expandir as colunas\n",
+    "frame_superior.grid_columnconfigure(0, weight=1)\n",
+    "frame_superior.grid_columnconfigure(1, weight=1)\n",
+    "\n",
+    "# Adicionar widgets ao frame superior e centralizar\n",
+    "label1 = tk.Label(frame_superior, text=\"Label 1\", bg=\"blue\", fg=\"white\")\n",
+    "label1.grid(row=0, column=0, padx=10, pady=10)\n",
+    "\n",
+    "label2 = tk.Label(frame_superior, text=\"Label 2\", bg=\"green\", fg=\"white\")\n",
+    "label2.grid(row=0, column=1, padx=10, pady=10)\n",
+    "\n",
+    "# Configurar o frame inferior para centralizar\n",
+    "frame_inferior.grid_rowconfigure(0, weight=1)\n",
+    "frame_inferior.grid_rowconfigure(1, weight=1)\n",
+    "frame_inferior.grid_columnconfigure(0, weight=1)\n",
+    "\n",
+    "# Adicionar widgets ao frame inferior e centralizar\n",
+    "label3 = tk.Label(frame_inferior, text=\"Label 3\", bg=\"red\", fg=\"white\")\n",
+    "label3.grid(row=0, column=0, padx=10, pady=10)\n",
+    "\n",
+    "label4 = tk.Label(frame_inferior, text=\"Label 4\", bg=\"purple\", fg=\"white\")\n",
+    "label4.grid(row=1, column=0, padx=10, pady=10)\n",
+    "\n",
+    "# Executar o loop principal\n",
+    "janela.mainloop()\n"
    ]
   }
  ],
