--- a/13.Tkinter.ipynb
+++ b/13.Tkinter.ipynb
@@ -376,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Usando Frames e Grids para organizar elementos\n",
+    "# # Exemplo 9 - Usando Frames e Grids para organizar elementos\n",
     "\n",
     "# Importe a biblioteca\n",
     "import tkinter as tk\n",
@@ -406,10 +406,10 @@
     "frame_superior.grid_columnconfigure(1, weight=1)\n",
     "\n",
     "# Adicionar widgets ao frame superior e centralizar\n",
-    "label1 = tk.Label(frame_superior, text=\"Label 1\", bg=\"blue\", fg=\"white\")\n",
+    "label1 = tk.Label(frame_superior, text=\"Label 1\", bg=\"blue\", fg=\"white\",font=(\"Helvetica\", 16))\n",
     "label1.grid(row=0, column=0, padx=10, pady=10)\n",
     "\n",
-    "label2 = tk.Label(frame_superior, text=\"Label 2\", bg=\"green\", fg=\"white\")\n",
+    "label2 = tk.Label(frame_superior, text=\"Label 2\", bg=\"green\", fg=\"white\",font=(\"Helvetica\", 16))\n",
     "label2.grid(row=0, column=1, padx=10, pady=10)\n",
     "\n",
     "# Configurar o frame inferior para centralizar\n",
@@ -418,15 +418,89 @@
     "frame_inferior.grid_columnconfigure(0, weight=1)\n",
     "\n",
     "# Adicionar widgets ao frame inferior e centralizar\n",
-    "label3 = tk.Label(frame_inferior, text=\"Label 3\", bg=\"red\", fg=\"white\")\n",
-    "label3.grid(row=0, column=0, padx=10, pady=10)\n",
+    "label3 = tk.Label(frame_inferior, text=\"Label 3\", bg=\"red\", fg=\"white\",font=(\"Helvetica\", 16))\n",
+    "label3.grid(row=0, column=0, pady=20,sticky=\"s\")\n",
     "\n",
-    "label4 = tk.Label(frame_inferior, text=\"Label 4\", bg=\"purple\", fg=\"white\")\n",
-    "label4.grid(row=1, column=0, padx=10, pady=10)\n",
+    "label4 = tk.Label(frame_inferior, text=\"Label 4\", bg=\"purple\", fg=\"white\",font=(\"Helvetica\", 16))\n",
+    "label4.grid(row=1, column=0, pady=20, sticky=\"n\")\n",
     "\n",
     "# Executar o loop principal\n",
     "janela.mainloop()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exemplo 10 - Usando Frames e Grids para organizar elementos, FullScreen e Quit button\n",
+    "\n",
+    "# Importe a biblioteca\n",
+    "import tkinter as tk\n",
+    "\n",
+    "# Criar uma janela\n",
+    "janela = tk.Tk()\n",
+    "\n",
+    "# Função para fechar a janela\n",
+    "def fechar_janela():\n",
+    "    janela.destroy()\n",
+    "\n",
+    "janela.attributes(\"-fullscreen\", True)  # Ativa o fullscreen\n",
+    "\n",
+    "# Métodos para o objeto janela\n",
+    "janela.title(\"Meu Aplicativo\")\n",
+    "janela.geometry(\"1024x720\")\n",
+    "janela.config(bg='#4a4a4a')\n",
+    "janela.iconbitmap(\"Assets/Tkinter.ico\")\n",
+    "\n",
+    "# Criar um frame superior e outro inferior\n",
+    "frame_superior = tk.Frame(janela, bg=\"lightgray\")\n",
+    "frame_superior.grid(row=0, column=0, sticky=\"ew\", padx=20, pady=20)\n",
+    "\n",
+    "frame_inferior = tk.Frame(janela, bg=\"darkgray\")\n",
+    "frame_inferior.grid(row=1, column=0, sticky=\"nsew\", padx=20, pady=20)\n",
+    "\n",
+    "# Configurar a janela para expandir os frames\n",
+    "janela.grid_rowconfigure(1, weight=1)\n",
+    "janela.grid_columnconfigure(0, weight=1)\n",
+    "\n",
+    "# Configurar o frame superior para expandir as colunas\n",
+    "frame_superior.grid_columnconfigure(0, weight=1)\n",
+    "frame_superior.grid_columnconfigure(1, weight=1)\n",
+    "\n",
+    "# Adicionar widgets ao frame superior e centralizar\n",
+    "label1 = tk.Label(frame_superior, text=\"Label 1\", bg=\"blue\", fg=\"white\",font=(\"Helvetica\", 16))\n",
+    "label1.grid(row=0, column=0, padx=10, pady=10)\n",
+    "\n",
+    "label2 = tk.Label(frame_superior, text=\"Label 2\", bg=\"green\", fg=\"white\",font=(\"Helvetica\", 16))\n",
+    "label2.grid(row=0, column=1, padx=10, pady=10)\n",
+    "\n",
+    "# Configurar o frame inferior para centralizar\n",
+    "frame_inferior.grid_rowconfigure(0, weight=1)\n",
+    "frame_inferior.grid_rowconfigure(1, weight=1)\n",
+    "frame_inferior.grid_columnconfigure(0, weight=1)\n",
+    "\n",
+    "# Adicionar widgets ao frame inferior e centralizar\n",
+    "label3 = tk.Label(frame_inferior, text=\"Label 3\", bg=\"red\", fg=\"white\",font=(\"Helvetica\", 16))\n",
+    "label3.grid(row=0, column=0, pady=20,sticky=\"s\")\n",
+    "\n",
+    "label4 = tk.Label(frame_inferior, text=\"Label 4\", bg=\"purple\", fg=\"white\",font=(\"Helvetica\", 16))\n",
+    "label4.grid(row=1, column=0, pady=20, sticky=\"n\")\n",
+    "\n",
+    "label5 = tk.Button(frame_inferior, text=\"Sair\", bg=\"black\", fg=\"white\",font=(\"Helvetica\", 16), command=fechar_janela)\n",
+    "label5.grid(row=1, column=0, padx=20,pady=20, sticky=\"se\")\n",
+    "\n",
+    "# Executar o loop principal\n",
+    "janela.mainloop()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
