--- a/13.Tkinter.ipynb
+++ b/13.Tkinter.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tkinter\n",
+    "<img src=\"Assets/tkinter.png\" alt=\"drawing\" width=\"200\"/>\n",
+    "\n",
     "Esta documentação está organizada no formato de Jupyter Notebook. Para entender melhor a extensão do uso de arquivos .ipynb:\n",
     "\n",
     "https://code.visualstudio.com/docs/datascience/jupyter-notebooks\n",
@@ -13,7 +14,7 @@
     "\n",
     "https://github.com/syedsohan/Markdown\n",
     "\n",
-    "# Sobre\n",
+    "# Sobre Tkinter\n",
     "Tkinter é a biblioteca padrão do Python para criar interfaces gráficas de usuário (GUI). Com esta biblioteca, podemos criar janelas, botões, caixas de entrada, menus entre outros componentes para fazer um front-end para nosso código :)\n",
     "\n",
     "Para acessar a documentação oficial da biblioteca:\n",
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +147,6 @@
     "janela.geometry(\"1024x720\") #  Define o tamanho da janela.\n",
     "janela.config(bg=\"gray\") # Configura várias opções para a janela principal.\n",
     "janela.iconbitmap(\"Assets/Tkinter.ico\") # Define o ícone da janela.\n",
-    "\n",
     "\n",
     "# Cria um widget\n",
     "\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
